css: fixed register form button overflow

--- a/packages/front/src/business/User/pages/Register/Form/index.module.scss
+++ b/packages/front/src/business/User/pages/Register/Form/index.module.scss
@@ -4,7 +4,6 @@
   margin-top: 35px;
 
   & button {
-    margin-top: 77px;
     width: 100%;
   }
 }
